<resources>
    <string name="app_name">WritersGroup</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_name">Name</string>

    <string name="anchor">Anchor</string>
    <string name="notAnAnchor">Not an Anchor</string>

    <string name="president">President</string>
    <string name="officer">Officer</string>
    <string name="regular">Regular</string>

    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_name">Enter Name</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_timer">TimerActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="timer_start_button">start timer</string>
    <string name="timer_end_button">end timer</string>
    <string name="sign_in_page_text">Enter number of pages</string>
    <string name="title_activity_wait">WaitActivity</string>
    <string name="title_activity_sign_up">Sign in</string>
    <string name="anchor_question">Would you like to be an anchor for the next 2 months?</string>
</resources>
