<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_horizontal"
    android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="csce.unt.writersgroup.SignUpActivity">

    <!-- Login progress -->
    <ProgressBar android:id="@+id/login_progress" style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_marginBottom="8dp" android:visibility="gone" />

    <ScrollView android:id="@+id/login_form" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout android:id="@+id/email_login_form" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="vertical">

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView android:id="@+id/email" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress" android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText android:id="@+id/password" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified" android:inputType="textPassword"
                    android:maxLines="1" android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView android:id="@+id/name" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/prompt_name"
                    android:inputType="textPersonName" android:maxLines="1"
                    android:singleLine="true" />


            </android.support.design.widget.TextInputLayout>

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/radio_anchortype"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton android:id="@+id/radio_anchor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/anchor"
                    android:onClick="onAnchorRadioButtonClicked"/>
                <RadioButton android:id="@+id/radio_notAnAchor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/notAnAnchor"
                    android:checked="true"
                    android:onClick="onAnchorRadioButtonClicked"/>
            </RadioGroup>

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/radio_usertype"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton android:id="@+id/radio_user_president"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/president"
                    android:onClick="onUserRadioButtonClicked"/>
                <RadioButton android:id="@+id/radio_user_officer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/officer"
                    android:onClick="onUserRadioButtonClicked"/>
                <RadioButton android:id="@+id/radio_user_regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/regular"
                    android:checked="true"
                    android:onClick="onUserRadioButtonClicked"/>
            </RadioGroup>

            <Button android:id="@+id/email_sign_up_button" style="?android:textAppearanceSmall"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:layout_marginTop="16dp" android:text="@string/action_sign_up"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
